# otus-PostgreSQL-2025-05-timofeevka

./: .gitignore  README.md  poetry.toml  pyproject.toml
deploy/: docker-compose.yml
deploy/docker/: docker-compose.yml
deploy/docker/mini_db/: docker-compose.yml
deploy/vm/: README.md  ansible.cfg  config_authorized_key.yml  inventory.ini  requirements.yml
deploy/vm/group_vars/: db.yml  mini_db.yml
deploy/vm/host_vars/: pg-slave02.yml  pg-slave03.yml
deploy/vm/playbooks/: config_authorized_key.yml  install_admin_tools.yml  install_db.yml  main.yml
hw1-isolation/: README.md
hw10-indexes/: README.md
hw11-partitioning/: README.md
hw12-triggers/: README.md
hw13-backups/: README.md
hw14-replication/: README.md
hw2-install-on-docker/: README.md
hw3-install-on-vm/: README.md
hw4-permissions/: README.md
hw5-load-testing/: README.md
hw6-autovacuum/: README.md
hw7-wal/: README.md
hw8-locks/: README.md
hw9-joins/: README.md
