[project]
name = "otus-postgresql-2025-05-timofeevka"
version = "0.1.0"
description = ""
authors = [
    { name = "Тимофеев Кирилл", email = "tk@webdl.ru" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ansible (==11.7.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
